Update Media Query

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </main>
     <!-- Editar Tarefas -->
-    <div class="edit-task">
+    <div class="edit-task none">
         <div class="edit-01">
             <h1>Lista de Tarefas</h1>
         </div>
